Josh updated tbales of counts for males an females

--- a/output/tables/abccare/rslt_female_counts.tex
+++ b/output/tables/abccare/rslt_female_counts.tex
@@ -3,36 +3,28 @@
 \caption{Treatment Effects of Center-based Childcare on Females, Counts  \label{tab:counts_female}}
 
   \begin{threeparttable}
-  \begin{tabular}{ccccccccc} \toprule
+  \begin{tabular}{ccccccccc}
+  \toprule
 
-     & \footnotesize{(1)} & \footnotesize{(2)} & \footnotesize{(3)} & \footnotesize{(4)} & \footnotesize{(5)} & \footnotesize{(6)} & \footnotesize{(7)} & \footnotesize{(8)} \\  
+     & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\  
 
-     &  &  & \mc{3}{c}{\footnotesize{$P=0$}} & \mc{3}{c}{\footnotesize{$P=1$}} \\ 
+     &  &  & \mc{3}{c}{\scriptsize{$P=0$}} & \mc{3}{c}{\scriptsize{$P=1$}} \\ 
     \cmidrule(lr){4-6} \cmidrule(lr){7-9} 
 
-    \footnotesize{Variable} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{KE$|X,W$} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{KE$|X,W$} \\ 
-    \midrule 
+    \scriptsize{Combining Function} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{KE$|X,W$} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{KE$|X,W$} \\ 
+    \midrule  
 
-    \\[0.1cm]
-    \mc{1}{l}{\footnotesize{\% Positive Treatment Effect}} & \mc{1}{c}{\footnotesize{79}} & \mc{1}{c}{\footnotesize{78}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{80}} & \mc{1}{c}{\footnotesize{81}} & \mc{1}{c}{\footnotesize{73}} & \mc{1}{c}{\footnotesize{72}} & \mc{1}{c}{\footnotesize{70}} \\  
+    \mc{1}{l}{\scriptsize{\% Pos. TE}} & \mc{1}{c}{\scriptsize{79}} & \mc{1}{c}{\scriptsize{78}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{80}} & \mc{1}{c}{\scriptsize{81}} & \mc{1}{c}{\scriptsize{73}} & \mc{1}{c}{\scriptsize{72}} & \mc{1}{c}{\scriptsize{70}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 25\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 50\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.020)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.020)}}} \\  
+    \mc{1}{l}{\scriptsize{\% Pos. TE $|$ 10\% Significance}} & \mc{1}{c}{\scriptsize{37}} & \mc{1}{c}{\scriptsize{37}} & \mc{1}{c}{\scriptsize{49}} & \mc{1}{c}{\scriptsize{48}} & \mc{1}{c}{\scriptsize{45}} & \mc{1}{c}{\scriptsize{23}} & \mc{1}{c}{\scriptsize{27}} & \mc{1}{c}{\scriptsize{20}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 75\%}} & \mc{1}{c}{\footnotesize{(0.333)}} & \mc{1}{c}{\footnotesize{(0.353)}} & \mc{1}{c}{\footnotesize{(0.216)}} & \mc{1}{c}{\footnotesize{(0.235)}} & \mc{1}{c}{\footnotesize{(0.294)}} & \mc{1}{c}{\footnotesize{(0.627)}} & \mc{1}{c}{\footnotesize{(0.667)}} & \mc{1}{c}{\footnotesize{(0.725)}} \\ 
-    \midrule
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.157)}} \\  
 
-    \\[0.1cm]
-    \mc{1}{l}{\footnotesize{\% Pos. TE $|$ 10\% Significance}} & \mc{1}{c}{\footnotesize{37}} & \mc{1}{c}{\footnotesize{37}} & \mc{1}{c}{\footnotesize{49}} & \mc{1}{c}{\footnotesize{48}} & \mc{1}{c}{\footnotesize{45}} & \mc{1}{c}{\footnotesize{23}} & \mc{1}{c}{\footnotesize{27}} & \mc{1}{c}{\footnotesize{20}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 25\%}} & \mc{1}{c}{\footnotesize{(0.118)}} & \mc{1}{c}{\footnotesize{\textbf{(0.078)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.039)}}} & \mc{1}{c}{\footnotesize{(0.588)}} & \mc{1}{c}{\footnotesize{(0.373)}} & \mc{1}{c}{\footnotesize{(0.725)}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 50\%}} & \mc{1}{c}{\footnotesize{(0.882)}} & \mc{1}{c}{\footnotesize{(0.922)}} & \mc{1}{c}{\footnotesize{(0.549)}} & \mc{1}{c}{\footnotesize{(0.588)}} & \mc{1}{c}{\footnotesize{(0.725)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(0.980)}} & \mc{1}{c}{\footnotesize{(1.000)}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 75\%}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} \\ 
-    \toprule
+  \bottomrule
   \end{tabular}
+
     \begin{tablenotes}
     \footnotesize
     \item 
@@ -40,6 +32,12 @@ Note: This table displays the percentage of the 95 outcomes for which we estimat
 treatment effects. For outcomes where a negative treatment effect is beneficial to the subjects
 (e.g. prevalence of diabetes), we reverse the signs of treatment effects so that all beneficial 
 effects have positive signs.
+We test the hypothesis that less than 50\% of the treatment effects are socially positive when not
+conditioning on statistical significance. Alternatively, we test the hypothesis that less than 10\% 
+of treatment effects are socially positive when conditioning on 10\% statistical significance.
+conditioning on our treatment effect estimates being statistically significant at the 10\% level.
+We present the percentage of socially positive treatment effect estimates
+with and without conditioning on being statistically significant at the 10\% level.
 Column (1) corresponds to the ITT, without accounting for any controls.
 Column (2) corresponds to the ITT conditioning on vector of controls, $X$, consisting of Apgar scores 1 minute and 5 minutes after birth, the HRI index, maternal IQ,
 an indicator for having a grandmother residing in the same county, and an index for the number
