--- a/output/tables/abccare/rslt_male_counts.tex
+++ b/output/tables/abccare/rslt_male_counts.tex
@@ -3,35 +3,26 @@
 \caption{Counts of Treatment Effects of Center-based Childcare on Males \label{tab:counts_male}}
 
   \begin{threeparttable}
-  \begin{tabular}{ccccccccc} \toprule
+  \begin{tabular}{ccccccccc}
+  \toprule
 
-     & \footnotesize{(1)} & \footnotesize{(2)} & \footnotesize{(3)} & \footnotesize{(4)} & \footnotesize{(5)} & \footnotesize{(6)} & \footnotesize{(7)} & \footnotesize{(8)} \\  
+     & \scriptsize{(1)} & \scriptsize{(2)} & \scriptsize{(3)} & \scriptsize{(4)} & \scriptsize{(5)} & \scriptsize{(6)} & \scriptsize{(7)} & \scriptsize{(8)} \\  
 
-     &  &  & \mc{3}{c}{\footnotesize{$P=0$}} & \mc{3}{c}{\footnotesize{$P=1$}} \\ 
+     &  &  & \mc{3}{c}{\scriptsize{$P=0$}} & \mc{3}{c}{\scriptsize{$P=1$}} \\ 
     \cmidrule(lr){4-6} \cmidrule(lr){7-9} 
 
-    \footnotesize{Variable} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{KE$|X,W$} & \footnotesize{ITT} & \footnotesize{ITT$|X,W$} & \footnotesize{KE$|X,W$} \\ 
-    \midrule
+    \scriptsize{Combining Function} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{KE$|X,W$} & \scriptsize{ITT} & \scriptsize{ITT$|X,W$} & \scriptsize{KE$|X,W$} \\ 
+    \midrule  
 
-    \\[0.1cm]
-    \mc{1}{l}{\footnotesize{\% Positive Treatment Effect}} & \mc{1}{c}{\footnotesize{68}} & \mc{1}{c}{\footnotesize{73}} & \mc{1}{c}{\footnotesize{61}} & \mc{1}{c}{\footnotesize{61}} & \mc{1}{c}{\footnotesize{70}} & \mc{1}{c}{\footnotesize{74}} & \mc{1}{c}{\footnotesize{74}} & \mc{1}{c}{\footnotesize{71}} \\  
+    \mc{1}{l}{\scriptsize{\% Pos. TE}} & \mc{1}{c}{\scriptsize{68}} & \mc{1}{c}{\scriptsize{73}} & \mc{1}{c}{\scriptsize{61}} & \mc{1}{c}{\scriptsize{61}} & \mc{1}{c}{\scriptsize{70}} & \mc{1}{c}{\scriptsize{74}} & \mc{1}{c}{\scriptsize{74}} & \mc{1}{c}{\scriptsize{71}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 25\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\  
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 50\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.059)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.078)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\  
+    \mc{1}{l}{\scriptsize{\% Pos. TE $|$ 10\% Significance}} & \mc{1}{c}{\scriptsize{41}} & \mc{1}{c}{\scriptsize{40}} & \mc{1}{c}{\scriptsize{29}} & \mc{1}{c}{\scriptsize{26}} & \mc{1}{c}{\scriptsize{31}} & \mc{1}{c}{\scriptsize{44}} & \mc{1}{c}{\scriptsize{36}} & \mc{1}{c}{\scriptsize{42}} \\  
 
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 75\%}} & \mc{1}{c}{\footnotesize{(0.784)}} & \mc{1}{c}{\footnotesize{(0.569)}} & \mc{1}{c}{\footnotesize{(0.941)}} & \mc{1}{c}{\footnotesize{(0.922)}} & \mc{1}{c}{\footnotesize{(0.745)}} & \mc{1}{c}{\footnotesize{(0.588)}} & \mc{1}{c}{\footnotesize{(0.588)}} & \mc{1}{c}{\footnotesize{(0.667)}} \\ 
-    \midrule
+     & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.078)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.020)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} \\  
 
-    \\[0.1cm]
-    \mc{1}{l}{\footnotesize{\% Pos. TE $|$ 10\% Significance}} & \mc{1}{c}{\footnotesize{41}} & \mc{1}{c}{\footnotesize{40}} & \mc{1}{c}{\footnotesize{29}} & \mc{1}{c}{\footnotesize{26}} & \mc{1}{c}{\footnotesize{31}} & \mc{1}{c}{\footnotesize{44}} & \mc{1}{c}{\footnotesize{36}} & \mc{1}{c}{\footnotesize{42}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 25\%}} & \mc{1}{c}{\footnotesize{\textbf{(0.078)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.039)}}} & \mc{1}{c}{\footnotesize{(0.333)}} & \mc{1}{c}{\footnotesize{(0.392)}} & \mc{1}{c}{\footnotesize{(0.314)}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{(0.196)}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 50\%}} & \mc{1}{c}{\footnotesize{(0.784)}} & \mc{1}{c}{\footnotesize{(0.863)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(0.980)}} & \mc{1}{c}{\footnotesize{(0.667)}} & \mc{1}{c}{\footnotesize{(0.941)}} & \mc{1}{c}{\footnotesize{(0.863)}} \\  
-
-    \mc{1}{l}{\footnotesize{$H_0$: $\le$ 75\%}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} & \mc{1}{c}{\footnotesize{(1.000)}} \\ 
-    \bottomrule
+  \bottomrule
   \end{tabular}
     \begin{tablenotes}
     \footnotesize
@@ -40,6 +31,9 @@ Note: This table displays the percentage of the 95 outcomes for which we estimat
 treatment effects. For outcomes where a negative treatment effect is beneficial to the subjects
 (e.g. prevalence of diabetes), we reverse the signs of treatment effects so that all beneficial 
 effects have positive signs.
+We test the hypothesis that less than 50\% of the treatment effects are socially positive when not
+conditioning on statistical significance. Alternatively, we test the hypothesis that less than 10\% 
+of treatment effects are socially positive when conditioning on 10\% statistical significance.
 Column (1) corresponds to the ITT, without accounting for any controls.
 Column (2) corresponds to the ITT conditioning on vector of controls, $X$, consisting of Apgar scores 1 minute and 5 minutes after birth, the HRI index, maternal IQ,
 an indicator for having a grandmother residing in the same county, and an index for the number
